// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal page  should match snapshot when source is not present in props 1`] = `
<div
  className="modal fade"
  id="dummyId"
  role="dialog"
>
  <div
    className="modal-dialog modal-lg"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          dummyHeader
        </h4>
      </div>
      <div
        className="modal-body"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="### Readme is not available"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-default"
          data-dismiss="modal"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal page  should match snapshot when source is present in props 1`] = `
<div
  className="modal fade"
  id="dummyId"
  role="dialog"
>
  <div
    className="modal-dialog modal-lg"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <button
          className="close"
          data-dismiss="modal"
          type="button"
        >
          ×
        </button>
        <h4
          className="modal-title"
        >
          dummyHeader
        </h4>
      </div>
      <div
        className="modal-body"
      >
        <ReactMarkdown
          astPlugins={Array []}
          escapeHtml={true}
          plugins={Array []}
          rawSourcePos={false}
          renderers={Object {}}
          skipHtml={false}
          source="### Dummy Readme"
          sourcePos={false}
          transformLinkUri={[Function]}
        />
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-default"
          data-dismiss="modal"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
